--- a/mediapicker/src/main/res/values-es/strings.xml
+++ b/mediapicker/src/main/res/values-es/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="app_name">MediaPickerPoject</string>
     <string name="library_name">MediaPicker</string>
     <string name="all_dir_name">Imágenes y Videos</string>
     <string name="all_video">Videos</string>
