--- a/mediapicker/src/main/res/values-pt-rPT/strings.xml
+++ b/mediapicker/src/main/res/values-pt-rPT/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="app_name">MediaPickerPoject</string>
     <string name="library_name">Seletor de Conteúdo</string>
     <string name="all_dir_name">Todas Imagens e Vídeos</string>
     <string name="all_video">Todos os Vídeos</string>
