--- a/mediapicker/src/main/res/values-zh/strings.xml
+++ b/mediapicker/src/main/res/values-zh/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="app_name">MediaPickerPoject</string>
     <string name="library_name">媒体选择器</string>
     <string name="all_dir_name">所有图片和视频</string>
     <string name="all_video">所有视频</string>
